# dataextractor

./: CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
dataextractor/: ProspectExceptions.py  README.md  __init__.py  analyze.py  cli.py  facade.py  logger.py  main.py  parser.py  patterns.py  reservoir.py  utils.py
dataextractor/sampleData/: sample_txt_file.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
sampleData/: sample_txt_file.txt
tests/: test_dataextractor.py
