

[metadata]
name = dataextractor
summary = Extracts the structured data from a unstructured text file
description-file =
    README.rst
author = Siddiq
author-email = siddiqhussainskm@gmail.com
home-page = https://github.com/siddiqskm/dataextractor
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.6
keywords = dataextractor
[entry_points]
console_scripts =
    dataextractor = dataextractor.cli:main

[files]
packages =
    dataextractor

[options]
zip_save = False

[pbr]
warnerrors = True

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[tool:pytest]
collect_ignore = ['setup.py']
